--- a/css/style.css
+++ b/css/style.css
@@ -342,14 +342,14 @@ a:focus {
         width: 100%;
         top:45px;
         padding:8px 30px;
-        background:#2d2b5f !important;
+        background:#0a2747 !important;
         border-bottom: 1px solid rgba(255, 255, 255, .3);
         z-index: 9;
     }
     
     .navbar.nav-sticky {
         padding: 10px 40px;
-        background: #2d2b5f !important;
+        background: #0a2747 !important;
         border-bottom: none;
     }
     
@@ -367,7 +367,7 @@ a:focus {
 @media (max-width: 991.98px) {   
     .navbar {
         padding: 2px;
-        background: #2d2b5f !important;
+        background: #0a2747 !important;
     }
     
     .navbar a.nav-link {
@@ -1123,7 +1123,7 @@ a:focus {
     margin: 45px 0;
     display: flex;
     align-items: center;
-    background: #2d2b5f;
+    background: #0a2747;
 }
 
 .facts .facts-item {
@@ -2164,7 +2164,7 @@ a:focus {
     position: relative;
     margin-top: 0px;
     padding-top: 90px;
-    background: #2d2b5f;
+    background: #0a2747;
 }
 
 .footer .footer-contact,
