--- a/css/styleProducto.css
+++ b/css/styleProducto.css
@@ -340,19 +340,19 @@ a:focus {
         width: 100%;
         top:45px;
         padding:8px 30px;
-        background:#2d2b5f !important;
+        background:#0a2747 !important;
         border-bottom: 1px solid rgba(255, 255, 255, .3);
         z-index: 9;
     }
     
     .navbar.nav-sticky {
         padding: 10px 40px;
-        background: #2d2b5f !important;
+        background: #0a2747 !important;
         border-bottom: none;
     }
     
     .page .navbar {
-        background: #2d2b5f !important;
+        background: #0a2747 !important;
     }
     
     .navbar a.nav-link {
@@ -365,7 +365,7 @@ a:focus {
 @media (max-width: 991.98px) {   
     .navbar {
         padding: 2px;
-        background: #2d2b5f !important;
+        background: #0a2747 !important;
     }
     
     .navbar a.nav-link {
@@ -927,11 +927,11 @@ a:focus {
 }
 
 .donate .donate-content .section-header h2 {
-    color: #2d2b5f;
+    color: #0a2747;
 }
 
 .donate .donate-text p {
-    color: #2d2b5f;
+    color: #0a2747;
     font-size: 18px;
 }
 
@@ -1120,7 +1120,7 @@ a:focus {
     margin: 45px 0;
     display: flex;
     align-items: center;
-    background: #2d2b5f;
+    background: #0a2747;
 }
 
 .facts .facts-item {
@@ -1359,11 +1359,11 @@ a:focus {
 }
 
 .volunteer .volunteer-content .section-header h2 {
-    color: #2d2b5f;
+    color: #0a2747;
 }
 
 .volunteer .volunteer-text p {
-    color: #2d2b5f;
+    color: #0a2747;
     font-size: 18px;
 }
 
@@ -2161,7 +2161,7 @@ a:focus {
     position: relative;
     margin-top: 0px;
     padding-top: 90px;
-    background: #2d2b5f;
+    background: #0a2747;
 }
 
 .footer .footer-contact,
@@ -2295,7 +2295,7 @@ a:focus {
     font-family:'Lato', sans-serif;
 }
 body{
-    background: #2d2b5f;
+    background: #0a2747;
 }
 .container__card{
     max-width: 1200px;
